# bibliotech

./: PRD.md  db.sqlite3  pyproject.toml
apps/app_acervo/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/app_acervo/migrations/: 0001_initial.py
apps/app_bibliotecas/: apps.py  forms.py  models.py  urls.py  views.py
apps/app_bibliotecas/migrations/: 0001_initial.py
apps/app_emprestimos/: apps.py  models.py  signals.py  tests.py  urls.py  views.py
apps/app_emprestimos/migrations/: 0001_initial.py  0002_alter_emprestimo_status.py
apps/app_notificacoes/: apps.py  context_processors.py  handlers.py  middleware.py  models.py  services.py  urls.py  views.py
apps/app_notificacoes/migrations/: 0001_initial.py
apps/app_recomendacoes/: apps.py  services.py  urls.py  views.py
apps/app_usuarios/: forms.py  models.py  permissions.py  urls.py  views.py
apps/app_usuarios/migrations/: 0001_initial.py  (+1 more)
config/: settings.py  urls.py
templates/: base.html  home.html
templates/acervo/: cadastro_livro.html  detalhe_livro.html  editar_exemplar.html  excluir_exemplar_confirm.html  gerenciar_exemplares.html  lista_livros.html
templates/bibliotecas/: form.html  lista.html
templates/emprestimos/: lista.html
templates/notificacoes/: lista.html
templates/partials/: messages.html
templates/usuarios/: admin_edit_user.html  lista_usuarios.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  perfil.html  registro.html
(+8 files in other folders)
