[tool.poetry]
name = "bibliotech"
version = "0.1.0"
description = ""
authors = ["Leandro Machado <leandrovictoram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.5"
django-htmx = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
